解决linear线程会根据服务器打开时间无限增长的问题